adjust openpyxl version pin

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,7 @@ csvx = "*"
 sqlbag = "*"
 sqlalchemy = ">=1.2.12"
 xlrd = "*"
-openpyxl = "!=2.5.10"
+openpyxl = "<2.5.10"
 tabulate = "*"
 markdown = "*"
 migra = "*"
