--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ psycopg2-binary = "*"
 logx = "*"
 csvx = "*"
 sqlbag = "*"
-sqlalchemy = ">=1.2.12"
+sqlalchemy = "*"
 xlrd = "*"
 openpyxl = "<2.5.10"
 tabulate = "*"
