--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,22 +10,24 @@ python = ">=3.7"
 psycopg2-binary = "*"
 logx = "*"
 csvx = "*"
-sqlbag = "*"
+sqlbag = ">=0.1.1548994599"
 sqlalchemy = "*"
-xlrd = "*"
-openpyxl = "<2.5.10"
+xlrd = { version="*", optional=true }
+openpyxl = { version="<2.5.10", optional=true }
 tabulate = "*"
 markdown = "*"
 migra = "*"
 furl = "*"
 chardet = "*"
 pendulum = "*"
-black = "^18.3-alpha.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "*"
 isort = "*"
 pyyaml = "*"
-black = "*"
 flake8 = "*"
 pytest-cov = "*"
+black = "^18.3-alpha.0"
+
+[tool.poetry.extras]
+excel = ["xlrd", "openpyxl"]
