--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ sqlbag = ">=0.1.1548994599"
 sqlalchemy = "*"
 xlrd = {version="*", optional=true}
 openpyxl = {version="<2.5.10", optional=true}
+xlsxwriter = {version="*", optional=true}
 tabulate = "*"
 markdown = "*"
 migra = "*"
@@ -27,7 +28,12 @@ isort = "*"
 pyyaml = "*"
 flake8 = "*"
 pytest-cov = "*"
-black = "^18.3-alpha.0"
+black = {python=">3.6", version=">=18.9b0", allow_prereleases=true}
 
 [tool.poetry.extras]
-excel = ["xlrd", "openpyxl"]
+excel = ["xlrd", "openpyxl", "xlsxwriter"]
+
+[tool.isort]
+multi_line_output = 3
+include_trailing_comma = true
+line_length = 88
