update parameter name to fix deprecation warning (#16)

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ psycopg2-binary = "*"
 logx = "*"
 csvx = "*"
 sqlbag = ">=0.1.1548994599"
-sqlalchemy = "*"
+sqlalchemy = ">=1.3"
 xlrd = {version="*", optional=true}
 openpyxl = {version="<2.6.3", optional=true}
 xlsxwriter = {version="*", optional=true}
