--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,7 @@ pytest = "*"
 isort = "*"
 pyyaml = "*"
 flake8 = {git="https://github.com/PyCQA/flake8"}
+pyflakes = {git="https://github.com/PyCQA/pyflakes"}
 pytest-cov = "*"
 black = ">=19.10b0"
 pgnotify = "*"
