--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,8 @@ pendulum = "*"
 pytest = "*"
 isort = "*"
 pyyaml = "*"
-flake8 = {git="https://github.com/PyCQA/flake8"}
-pyflakes = {git="https://github.com/PyCQA/pyflakes"}
+flake8 = "*"
+pyflakes = "*"
 pytest-cov = "*"
 black = ">=19.10b0"
 pgnotify = "*"
